@@ -83,6 +83,8 @@ Trunk (unreleased changes)
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-477 Drop table API in webhcat client does not respect the "ifExists" parameter.
+
   HCAT-471 Test HCat_ShowDes_1[1-3] fails (vikram.dixit via gates)
 
   HCAT-470 Update HCat version numbers in Templeton doc set (lefty via gates)
